@@ -48,7 +48,9 @@ import datawave.ingest.mapreduce.handler.DataTypeHandler;
 import datawave.ingest.mapreduce.job.metrics.MetricsConfiguration;
 import datawave.ingest.table.config.ShardTableConfigHelper;
 import datawave.ingest.table.config.TableConfigHelper;
+import datawave.iterator.ReducingIterator;
 import datawave.iterators.PropogatingIterator;
+import datawave.util.TableName;
 
 /**
  * This class serves as the liaison between datawave job configuration and accumulo tables. Most of this was ripped out of IngestJob for more convenient reuse
@@ -80,15 +82,19 @@ public class TableConfigurationUtil {
 
     }
 
+    /**
+     * Get the set of output table names as defined by {@link #JOB_OUTPUT_TABLE_NAMES}
+     *
+     * @param conf
+     *            the hadoop {@link Configuration}
+     * @return the set of output table names
+     */
     public static Set<String> getJobOutputTableNames(Configuration conf) {
-        HashSet tableNames = new HashSet<>();
-
+        Set<String> tableNames = new HashSet<>();
         String[] outputTables = conf.getStrings(JOB_OUTPUT_TABLE_NAMES);
-
-        if (null != outputTables && outputTables.length > 0) {
-            tableNames = new HashSet(Arrays.asList(outputTables));
+        if (outputTables != null && outputTables.length > 0) {
+            tableNames.addAll(Arrays.asList(outputTables));
         }
-
         return tableNames;
     }
 
@@ -147,8 +153,8 @@ public class TableConfigurationUtil {
                     }
                     DataTypeHandler<?> handler;
                     try {
-                        handler = handlerClass.newInstance();
-                    } catch (InstantiationException e) {
+                        handler = handlerClass.getDeclaredConstructor().newInstance();
+                    } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                         throw new IllegalArgumentException("Unable to instantiate " + handlerClassName, e);
                     } catch (IllegalAccessException e) {
                         throw new IllegalArgumentException("Unable to access default constructor for " + handlerClassName, e);
@@ -374,8 +380,8 @@ public class TableConfigurationUtil {
                     }
                     DataTypeHandler<?> handler;
                     try {
-                        handler = handlerClass.newInstance();
-                    } catch (InstantiationException e) {
+                        handler = handlerClass.getDeclaredConstructor().newInstance();
+                    } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                         throw new IllegalArgumentException("Unable to instantiate " + handlerClassName, e);
                     } catch (IllegalAccessException e) {
                         throw new IllegalArgumentException("Unable to access default constructor for " + handlerClassName, e);
@@ -573,6 +579,10 @@ public class TableConfigurationUtil {
                 }
                 for (Map.Entry<String,String> entry : tableProps.entrySet()) {
 
+                    if (entry.getKey().contains(TableName.SHARD_DAY_INDEX) || entry.getKey().contains(TableName.SHARD_YEAR_INDEX)) {
+                        continue;
+                    }
+
                     if (entry.getKey().startsWith(Property.TABLE_ITERATOR_PREFIX.getKey())) {
 
                         String suffix = entry.getKey().substring(Property.TABLE_ITERATOR_PREFIX.getKey().length());
@@ -620,8 +630,21 @@ public class TableConfigurationUtil {
                             } else
                                 log.trace("Skipping iterator class " + iter.getIteratorClass() + " since it doesn't have options.");
 
-                        }
-                        if (Combiner.class.isAssignableFrom(klass)) {
+                        } else if (ReducingIterator.class.isAssignableFrom(klass)) {
+                            Map<String,String> options = allOptions.get(iter.getName());
+                            if (null != options) {
+                                try {
+                                    ReducingIterator iterInstance = (ReducingIterator) (klass.getDeclaredConstructor().newInstance());
+                                    options.put(ITERATOR_CLASS_MARKER, iterInstance.getReducerClass().getName());
+                                    combinerMap.put(iter.getPriority(), options);
+                                } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException e) {
+                                    log.trace("Skipping iterator class " + iter.getIteratorClass() + " since it doesn't have an accessible null constructor",
+                                                    e);
+                                }
+                            } else {
+                                log.trace("Skipping iterator class " + iter.getIteratorClass() + " since it doesn't have options.");
+                            }
+                        } else if (Combiner.class.isAssignableFrom(klass)) {
                             Map<String,String> options = allOptions.get(iter.getName());
                             if (null != options) {
                                 options.put(ITERATOR_CLASS_MARKER, iter.getIteratorClass());
