@@ -4,6 +4,7 @@ import java.io.DataInput;
 import java.io.DataOutput;
 import java.io.IOException;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 
 import org.apache.accumulo.core.data.Key;
@@ -20,7 +21,7 @@ import datawave.query.collections.FunctionalSet;
 import datawave.query.jexl.DatawaveJexlContext;
 
 public class Content extends Attribute<Content> implements Serializable {
-    private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = -7916992260001007223L;
 
     private static final Type<?> normalizer = new LcNoDiacriticsType();
 
@@ -43,8 +44,11 @@ public class Content extends Attribute<Content> implements Serializable {
 
     @Override
     public long sizeInBytes() {
-        return sizeInBytes(content) + super.sizeInBytes(4);
-        // 4 for string reference
+        if (sizeInBytes == Long.MIN_VALUE) {
+            // 4 for string reference
+            sizeInBytes = sizeInBytes(content) + super.sizeInBytes(4) + 4;
+        }
+        return sizeInBytes;
     }
 
     public String getContent() {
@@ -62,18 +66,13 @@ public class Content extends Attribute<Content> implements Serializable {
 
     @Override
     public void write(DataOutput out) throws IOException {
-        write(out, false);
-    }
-
-    @Override
-    public void write(DataOutput out, boolean reducedResponse) throws IOException {
-        writeMetadata(out, reducedResponse);
+        writeMetadata(out);
         WritableUtils.writeString(out, content);
         WritableUtils.writeVInt(out, toKeep ? 1 : 0);
         out.writeBoolean(source != null);
         if (source != null) {
             WritableUtils.writeString(out, source.getClass().getCanonicalName());
-            source.write(out, reducedResponse);
+            source.write(out);
         }
     }
 
@@ -88,8 +87,8 @@ public class Content extends Attribute<Content> implements Serializable {
             Class sourceClass;
             try {
                 sourceClass = Class.forName(clazz);
-                source = (Attribute<?>) sourceClass.newInstance();
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+                source = (Attribute<?>) sourceClass.getDeclaredConstructor().newInstance();
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 throw new RuntimeException("could not parse source", e);
             }
 
@@ -124,10 +123,15 @@ public class Content extends Attribute<Content> implements Serializable {
 
     @Override
     public int hashCode() {
-        HashCodeBuilder hcb = new HashCodeBuilder(2099, 2129);
-        hcb.append(content).append(super.hashCode());
-
-        return hcb.toHashCode();
+        if (hashcode == Integer.MIN_VALUE) {
+            //  @formatter:off
+            hashcode = new HashCodeBuilder(2099, 2129)
+                    .append(content)
+                    .append(super.hashCode())
+                    .toHashCode();
+            //  @formatter:off
+        }
+        return hashcode;
     }
 
     @Override
@@ -137,18 +141,13 @@ public class Content extends Attribute<Content> implements Serializable {
 
     @Override
     public void write(Kryo kryo, Output output) {
-        write(kryo, output, false);
-    }
-
-    @Override
-    public void write(Kryo kryo, Output output, Boolean reducedResponse) {
-        super.writeMetadata(kryo, output, reducedResponse);
+        super.writeMetadata(kryo, output);
         output.writeString(this.content);
         output.writeBoolean(this.toKeep);
         output.writeBoolean(this.source != null);
         if (source != null) {
             output.writeString(this.source.getClass().getCanonicalName());
-            source.write(kryo, output, reducedResponse);
+            source.write(kryo, output);
         }
     }
 
@@ -159,13 +158,17 @@ public class Content extends Attribute<Content> implements Serializable {
         this.toKeep = input.readBoolean();
         boolean hasSource = input.readBoolean();
         if (hasSource) {
-            String clazz = input.readString();
-            Class sourceClass;
+            String className = null;
             try {
-                sourceClass = Class.forName(clazz);
-                source = (Attribute<?>) sourceClass.newInstance();
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-                throw new RuntimeException("could not parse source", e);
+                className = input.readString();
+                Class<?> clazz = classCache.get().get(className);
+                if(Attribute.class.isAssignableFrom(clazz)) {
+                    source = (Attribute<?>) clazz.getDeclaredConstructor().newInstance();
+                } else {
+                    throw new RuntimeException(className + " does not extend " + Attribute.class.getSimpleName());
+                }
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
+                throw new RuntimeException("Could not instantiate " + className, e);
             }
 
             source.read(kryo, input);
