@@ -26,6 +26,8 @@ public abstract class DatawaveArithmetic extends JexlArithmetic {
 
     private static final Logger log = Logger.getLogger(DatawaveArithmetic.class);
 
+    private static final Object LOCK = new Object();
+
     /**
      * Default to being lenient so we don't have to add "null" for every field in the query that doesn't exist in the document
      */
@@ -189,7 +191,7 @@ public abstract class DatawaveArithmetic extends JexlArithmetic {
         if (isFloatingPointNumber(left) || isFloatingPointNumber(right)) {
             double l = toDouble(left);
             double r = toDouble(right);
-            return new Double(l - r);
+            return Double.valueOf(l - r);
         }
 
         // if either are bigdecimal use that type
@@ -317,7 +319,7 @@ public abstract class DatawaveArithmetic extends JexlArithmetic {
         final IntsRefBuilder irBuilder = new IntsRefBuilder();
         Util.toUTF16(object.toString(), irBuilder);
         final IntsRef ints = irBuilder.get();
-        synchronized (fst) {
+        synchronized (LOCK) {
             return Util.get(fst, ints) != null;
         }
     }
