@@ -2,8 +2,6 @@ package datawave.query.tables;
 
 import static java.lang.Thread.sleep;
 
-import static org.junit.Assert.fail;
-
 import java.io.IOException;
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
@@ -45,9 +43,6 @@ import org.junit.BeforeClass;
 import org.junit.ClassRule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
-
-import com.google.common.util.concurrent.MoreExecutors;
-import com.google.common.util.concurrent.Service;
 
 /**
  * This test spins up a mini accumulo to accurately test the effect of underlying Scanner/Batch scanners against the ScannerSession. InMemoryAccumulo makes some
@@ -230,10 +225,10 @@ public class ScannerSessionTest {
             int row = Integer.parseInt(entry.getKey().getRow().toString());
             Integer rowCount = results.get(row);
             if (rowCount == null) {
-                rowCount = new Integer(0);
+                rowCount = 0;
             }
 
-            rowCount = rowCount.intValue() + 1;
+            rowCount = rowCount + 1;
             results.put(row, rowCount);
             count++;
         }
@@ -257,7 +252,7 @@ public class ScannerSessionTest {
         Assert.assertEquals(140000, count);
         Assert.assertEquals(14, results.keySet().size());
         for (Integer row : results.keySet()) {
-            Assert.assertEquals(new Integer(10000), results.get(row));
+            Assert.assertEquals(Integer.valueOf(10000), results.get(row));
         }
 
         ss.close();
