@@ -1,19 +1,16 @@
 package datawave.webservice.query.configuration;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.powermock.modules.junit4.PowerMockRunner;
+import org.junit.jupiter.api.Test;
 
 import datawave.query.data.UUIDType;
 
-@RunWith(PowerMockRunner.class)
 public class TestLookupUUIDConfiguration {
 
     @Test
@@ -22,13 +19,13 @@ public class TestLookupUUIDConfiguration {
         LookupUUIDConfiguration subject = new LookupUUIDConfiguration();
         subject.setBeginDate(SimpleDateFormat.getDateInstance().format(new Date()));
         subject.setColumnVisibility("A&B");
-        subject.setUuidTypes(Arrays.asList(new UUIDType()));
+        subject.setUuidTypes(List.of(new UUIDType()));
 
         // Verify results
-        assertNotNull("Test subject should not be null", subject);
-        assertNotNull("Begin date should not be null", subject.getBeginDate());
-        assertNotNull("ColumnVisibility should not be null", subject.getColumnVisibility());
-        assertNotNull("UUID types should not be null", subject.getUuidTypes());
-        assertEquals("UUID types should include 1 item", 1, subject.getUuidTypes().size());
+        assertNotNull(subject, "Test subject should not be null");
+        assertNotNull(subject.getBeginDate(), "Begin date should not be null");
+        assertNotNull(subject.getColumnVisibility(), "ColumnVisibility should not be null");
+        assertNotNull(subject.getUuidTypes(), "UUID types should not be null");
+        assertEquals(1, subject.getUuidTypes().size(), "UUID types should include 1 item");
     }
 }
